--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
       "esbuild",
       "prisma",
       "puppeteer"
-    ]
+    ],
+    "overrides": {
+      "form-data": "^4.0.0",
+      "tough-cookie": "^5.0.0",
+      "request": "npm:@cypress/request@^3.0.0"
+    }
   },
   "version": "1.0.0",
   "description": "Create a lean, modular service that:",
