--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
       "esbuild",
       "prisma",
       "puppeteer"
-    ],
-    "overrides": {
-      "form-data": "^4.0.0",
-      "tough-cookie": "^5.0.0",
-      "request": "npm:@cypress/request@^3.0.0"
-    }
+    ]
   },
   "version": "1.0.0",
   "description": "Create a lean, modular service that:",
@@ -52,8 +47,8 @@
     "@prisma/client": "^6.17.1",
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
+    "grammy": "^1.38.4",
     "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.67.0",
     "openai": "^5.0.1",
     "puppeteer": "^24.22.3",
     "zod": "^3.25.42"
